# Advent-Of-Code

./: .gitignore  README.md
2023/: README.md
2023/day1/src/: lib.rs
2023/day2/: Cargo.toml
2023/day2/src/: lib.rs
2023/day3/: Cargo.toml
2023/day3/src/: main.rs
2023/day5/: Cargo.toml
2023/day6/src/: main.rs
2023/day7/: input-mod
2023/day7/src/: lib.rs  main.rs
2023/day8/: Cargo.toml
2023/day8/src/: lib.rs  main.rs
2023/day9/: Cargo.toml
2023/day9/src/: lib.rs  main.rs
2024/: README.md
2024/day1/src/: main.rs
2024/day10/: Cargo.toml
2024/day10/src/: alt.rs  main.rs
2024/day11/: Cargo.toml  bench.bash  release-bench.md
2024/day11/src/: main.rs  wrong_assumption.rs
2024/day12/: Cargo.toml  tricky_corner.txt
2024/day12/src/: main.rs  mess.rs
2024/day13/: Cargo.toml
2024/day13/src/: main.rs
2024/day14/: .gitignore  Cargo.toml
2024/day14/src/: main.rs
2024/day15/: Cargo.toml  NOTE
2024/day15/src/: main.rs
2024/day16/: Cargo.toml
2024/day16/src/: main.rs
2024/day17/: Cargo.toml
2024/day17/src/: main.rs
2024/day18/: Cargo.toml
2024/day19/: Cargo.toml
2024/day19/src/: main.rs
2024/day2/: NOTE
2024/day2/src/: main.rs
2024/day20/: Cargo.toml
2024/day20/src/: main.rs
2024/day3/: Cargo.toml
2024/day3/src/: main.rs
2024/day4/shorter_solution/: Cargo.toml
2024/day5/: Cargo.toml
2024/day5/src/: main.rs
2024/day6/: CREDIT.md  Cargo.toml  NOTE  part1.ansi  part2.ansi
2024/day6/src/: main.rs
2024/day7/: Cargo.toml
2024/day7/src/: main.rs
2024/day8/: Cargo.toml
2024/day8/src/: main.rs
2024/day9/: Cargo.toml
2024/day9/src/: main.rs
2025/: day2_comparison.bash
2025/day1/: Cargo.toml
2025/day1/src/: main.rs
2025/day2/: Cargo.toml
2025/day2/src/: main.rs
2025/day2_cuda/: Cargo.toml  build.rs  target
2025/day2_cuda/cuda_src/: gpu_proc.cu
2025/day2_cuda/src/: cuda.rs  main.rs
2025/day2_opt/: Cargo.toml  ex.txt
2025/day3/: Cargo.toml
2025/day4_opt/: Cargo.toml
2025/day5/: Cargo.toml
2025/day6/: Cargo.toml
2025/day7/: Cargo.toml
2025/day8/: Cargo.toml
2025/day9/: Cargo.toml
day1/: Cargo.toml
day1/src/: main.rs
day2/src/: main.rs
day3/src/: lib.rs
day4/: Cargo.toml
day4/src/: lib.rs  main.rs
day5/src/: lib.rs  main.rs
day6/: Cargo.toml
day6/src/: lib.rs
day7/: Cargo.toml
day9/: Cargo.toml
day9/benches/: solution_speeds.rs
day9/src/: lib.rs  main.rs
rust-lib/: Cargo.toml
rust-lib/src/: direction.rs  gcd.rs  grid.rs  grid_ext.rs  iter.rs  lib.rs  ll.rs  posn.rs  read.rs  signed.rs  signed_ext.rs
(+12 files in other folders)
