[package]
name = "day4"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
name = "day4"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.75"
itertools = "0.12.0"
