[package]
name = "day2"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
name = "day2"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.75"
derive-getters = "0.3.0"
itertools = "0.12.0"
regex = "1.10.2"
strum = "0.25.0"
strum_macros = "0.25.3"
