[package]
name = "day3"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
name = "day3"
path = "src/main.rs"

[dependencies]
derive-getters = "0.3.0"
itertools = "0.12.0"
