[package]
name = "day9"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[features]
default = []
simd = [] # Requires nightly as of 12/9/2023

[[bin]]
name = "day8"
path = "src/main.rs"

[dev-dependencies]
criterion = "0.5.1"
lazy_static = "1.4.0"
seq-macro = "0.3.5"

[[bench]]
name = "solution_speeds"
harness = false

[dependencies]
anyhow = "1.0.75"
itertools = "0.12.0"
num = "0.4.1"
rayon = "1.8.0"
